syntax = "proto3";

package oasis;

// ===== 强类型 ID 定义 =====
message AgentId {
  string value = 1;
}

message TaskId {
  string value = 1;
}

message BatchId {
  string value = 1;
}

// ===== 任务状态枚举 =====
enum TaskStateEnum {
  TASK_CREATED = 0;
  TASK_PENDING = 1;
  TASK_RUNNING = 2;
  TASK_SUCCESS = 3;
  TASK_FAILED = 4;
  TASK_TIMEOUT = 5;
  TASK_CANCELLED = 6;
}

// ===== Agent 状态枚举 =====
enum AgentStatusEnum {
  AGENT_ONLINE = 0;
  AGENT_OFFLINE = 1;
  AGENT_REMOVED = 2;
}

message SelectorExpression {
  string expression = 1;
}

message EmptyMsg {}


// 完整的任务信息
message TaskMsg {
  TaskId task_id = 1;
  BatchId batch_id = 2;
  AgentId agent_id = 3;

  // 执行定义
  string command = 4;
  repeated string args = 5;
  
  uint32 timeout_seconds = 6;
  
  // 状态信息
  TaskStateEnum state = 7;

  int64 created_at = 8;
  int64 updated_at = 9;
}

message BatchMsg {
  BatchId batch_id = 1;
  string command = 2;
  repeated string args = 3;
  uint32 timeout_seconds = 4;
  int64 created_at = 5;
}

// 任务执行结果 - 单个Agent执行结果
message TaskExecutionMsg {
  TaskId task_id = 1;
  AgentId agent_id = 2;
  
  // 执行结果
  TaskStateEnum state = 3;
  optional int32 exit_code = 4;
  string stdout = 5;
  string stderr = 6;
  
  // 时间信息
  int64 started_at = 7;
  optional int64 finished_at = 8;
  optional double duration_ms = 9;
}

// 批次请求消息 
message BatchRequestMsg {
  string command = 1;
  repeated string args = 2;
  SelectorExpression target = 3;
  uint32 timeout_seconds = 4;
}

// 提交批次请求
message SubmitBatchRequest {
  BatchRequestMsg batch_request = 1;
}

// 提交批次响应
message SubmitBatchResponse {
  BatchId batch_id = 1;
  int64 agent_nums = 2;
}

message GetBatchDetailsRequest {
  BatchId batch_id = 1;
  repeated TaskStateEnum states = 2;
}

message GetBatchDetailsResponse {
  repeated TaskExecutionMsg tasks = 1;
}

// 列出任务请求
message ListBatchesRequest {
  uint32 limit = 1;
  repeated TaskStateEnum states = 2;  // 筛选状态
}

// 列出任务响应
message ListBatchesResponse {
  repeated BatchMsg batches = 1;
  uint32 total_count = 2;
  bool has_more = 3;
}

// 取消批次任务请求
message CancelBatchRequest {
  BatchId batch_id = 1;
}

// 取消批次任务响应
message CancelBatchResponse {
  bool success = 1;
}

message AgentStatus {
  AgentId agent_id = 1;
  bool online = 2;
}

message ListAgentsRequest {
  bool verbose = 1;
  SelectorExpression target = 2; 
  bool is_online = 3;
}

message AgentInfoMsg {
  AgentId id = 1;
  AgentStatusEnum status = 2;
  map<string, string> info = 3;
  int64 last_heartbeat = 4;
  string version = 5;
  repeated string capabilities = 6;
}

message ListAgentsResponse {
  repeated AgentInfoMsg agents = 1;
}

message RemoveAgentRequest {
  AgentId id = 1;
}

message RemoveAgentResponse {
  bool success = 1;
  string message = 2;
}

message FileSpecMsg {
  // 文件基本信息
  string name = 1;
  uint64 size = 2;
  string checksum = 3;
  string content_type = 4;
  int64 created_at = 5;
}

message FileApplyConfigMsg {
  string name = 1;
  string destination_path = 2;
  string owner = 3;            // user:group 格式
  string mode = 4;             // 0644 格式
  SelectorExpression target = 5;   
}

message FileChunkMsg {
  string upload_id = 1;
  uint64 offset = 2;
  bytes data = 3;
}

message FileChunkResponse {
  uint64 received_bytes = 1;
  bool complete = 2;  // 是否完成上传
}

message CommitFileMsg {
  string upload_id = 1;
  bool verify_checksum = 2;  // 是否验证校验和
}

message FileUploadSession {
  string upload_id = 1;
  uint64 received_bytes = 2;  // 已接收字节（断点续传）
  uint64 chunk_size = 3;      // 建议的分片大小
  bool resume = 4;            // 是否为续传
}

message FileOperationResult {
  bool success = 1;
  string message = 2;
}


message FileApplyRequestMsg {
  FileApplyConfigMsg config = 2;
}

message LeaderInfoMsg {
  string instance_id = 1;
  int64 elected_at = 2;
  int64 last_renewal = 3;
}

// ===== 主服务定义 =====
service OasisService {
  // 任务管理
  rpc SubmitBatch(SubmitBatchRequest) returns (SubmitBatchResponse);
  rpc GetBatchDetails(GetBatchDetailsRequest) returns (GetBatchDetailsResponse);
  rpc ListBatches(ListBatchesRequest) returns (ListBatchesResponse);
  rpc CancelBatch(CancelBatchRequest) returns (CancelBatchResponse);
  
  // Agent管理
  rpc ListAgents(ListAgentsRequest) returns (ListAgentsResponse);
  rpc RemoveAgent(RemoveAgentRequest) returns (RemoveAgentResponse);
  
  // 文件管理
  rpc BeginFileUpload(FileSpecMsg) returns (FileUploadSession);
  rpc UploadFileChunk(FileChunkMsg) returns (FileChunkResponse);
  rpc CommitFileUpload(CommitFileMsg) returns (FileOperationResult);
  rpc ApplyFile(FileApplyRequestMsg) returns (FileOperationResult);
  rpc ClearFiles(EmptyMsg) returns (FileOperationResult);
}

