use crate::client::format_grpc_error;
use crate::grpc_retry;
use crate::ui::{print_header, print_info, print_next_step, print_warning};
use anyhow::{Result, anyhow};
use base64::Engine;
use clap::{Parser, Subcommand};
use comfy_table::{
    Attribute, Cell, CellAlignment, Color, ContentArrangement, Table, presets::UTF8_FULL,
};
use console::style;
use oasis_core::proto::{
    BatchMsg, BatchRequestMsg, CancelBatchRequest, GetBatchDetailsRequest, GetTaskOutputRequest,
    ListBatchesRequest, SelectorExpression, SubmitBatchRequest, TaskExecutionMsg, TaskId,
    TaskStateEnum, oasis_service_client::OasisServiceClient,
};

/// exec å­å‘½ä»¤é›†åˆ
#[derive(Parser, Debug)]
#[command(
    name = "exec",
    about = "åœ¨åŒ¹é…åˆ°çš„ Agent ä¸Šæ‰§è¡Œå‘½ä»¤ï¼Œç®¡ç†ä»»åŠ¡ç”Ÿå‘½å‘¨æœŸ",
    after_help = r#"ç¤ºä¾‹ï¼š
  # æäº¤ä»»åŠ¡ï¼ˆå¼‚æ­¥æ‰§è¡Œï¼‰
  oasis-cli exec run -t 'labels["role"] == "web"' -- /usr/bin/uptime

  # è·å–æ‰¹é‡ä»»åŠ¡åˆ—è¡¨
  oasis-cli exec get <batch_id>

  # åˆ—å‡ºå…¨éƒ¨æ‰¹é‡ä»»åŠ¡
  oasis-cli exec list --limit 20

  # å–æ¶ˆæ‰¹é‡ä»»åŠ¡ï¼ˆåªæ”¯æŒæ‰¹é‡å–æ¶ˆï¼‰
  oasis-cli exec cancel <batch_id>
"#
)]
pub struct ExecArgs {
    #[command(subcommand)]
    pub cmd: ExecCmd,
}

#[derive(Subcommand, Debug)]
pub enum ExecCmd {
    /// æäº¤ä»»åŠ¡
    Run(ExecRunArgs),
    /// è·å–æ‰¹é‡ä»»åŠ¡åˆ—è¡¨
    Get(ExecGetArgs),
    /// è·å–ä»»åŠ¡åˆ—è¡¨
    List(ExecListArgs),
    /// å–æ¶ˆæŒ‡å®šä»»åŠ¡
    Cancel(ExecCancelArgs),
    /// æŸ¥çœ‹å•ä¸ªä»»åŠ¡çš„å®Œæ•´è¾“å‡ºï¼ˆstdout/stderrï¼‰
    Output(ExecOutputArgs),
}

#[derive(Parser, Debug)]
pub struct ExecRunArgs {
    /// ç›®æ ‡ï¼ˆé€‰æ‹©å™¨è¯­æ³•ï¼‰
    #[arg(long, short = 't', help = "ç›®æ ‡ï¼ˆé€‰æ‹©å™¨è¯­æ³•ï¼‰", default_value = "all")]
    pub target: String,

    /// è¦æ‰§è¡Œçš„å‘½ä»¤ä¸å‚æ•°ï¼Œå¿…é¡»åœ¨ -- ä¹‹åç»™å‡º
    #[arg(
        last = true,
        required = true,
        help = "è¦æ‰§è¡Œçš„å‘½ä»¤ä¸å‚æ•°ï¼ˆç½®äº -- ä¹‹åï¼‰"
    )]
    pub command: Vec<String>,

    /// è¶…æ—¶æ—¶é—´ï¼ˆç§’ï¼‰ï¼Œé»˜è®¤300ç§’
    #[arg(long, default_value_t = 300)]
    pub timeout: u32,

    /// ä»»åŠ¡ä¼˜å…ˆçº§
    #[arg(long, default_value = "normal")]
    pub priority: String,
}

#[derive(Parser, Debug)]
pub struct ExecGetArgs {
    /// æ‰¹é‡ä»»åŠ¡ ID
    pub batch_id: String,
    /// ç­›é€‰çŠ¶æ€
    #[arg(long, value_delimiter = ',')]
    pub states: Option<Vec<String>>,
}

#[derive(Parser, Debug)]
pub struct ExecListArgs {
    /// é™åˆ¶è¿”å›æ•°é‡
    #[arg(long, default_value_t = 20)]
    pub limit: u32,
    /// ç­›é€‰çŠ¶æ€
    #[arg(long, value_delimiter = ',')]
    pub states: Option<Vec<String>>,
}

#[derive(Parser, Debug)]
pub struct ExecCancelArgs {
    /// æ‰¹æ¬¡ ID
    pub batch_id: String,
}

#[derive(Parser, Debug)]
pub struct ExecOutputArgs {
    /// ä»»åŠ¡ ID
    pub task_id: String,
}

/// ä¸»å…¥å£å‡½æ•° - æ ¹æ®å­å‘½ä»¤åˆ†å‘æ‰§è¡Œ
pub async fn run_exec(
    mut client: OasisServiceClient<tonic::transport::Channel>,
    args: ExecArgs,
) -> Result<()> {
    match args.cmd {
        ExecCmd::Run(run) => run_exec_run(&mut client, run).await,
        ExecCmd::Get(get) => run_exec_get(&mut client, get).await,
        ExecCmd::List(list) => run_exec_list(&mut client, list).await,
        ExecCmd::Cancel(cancel) => run_exec_cancel(&mut client, cancel).await,
        ExecCmd::Output(output) => run_exec_output(&mut client, output).await,
    }
}

fn decode_base64_prefixed(s: &str) -> String {
    if let Some(rest) = s.strip_prefix("base64:") {
        base64::engine::general_purpose::STANDARD
            .decode(rest)
            .map(|b: Vec<u8>| String::from_utf8_lossy(&b).to_string())
            .unwrap_or_else(|_| s.to_string())
    } else {
        s.to_string()
    }
}

async fn run_exec_output(
    client: &mut OasisServiceClient<tonic::transport::Channel>,
    args: ExecOutputArgs,
) -> Result<()> {
    print_header(&format!("ä»»åŠ¡è¾“å‡º: {}", style(&args.task_id).cyan()));

    let pb = crate::ui::create_spinner("æ­£åœ¨è·å–ä»»åŠ¡è¾“å‡º...");

    let request = GetTaskOutputRequest {
        task_id: Some(TaskId {
            value: args.task_id.clone(),
        }),
    };

    let response = match grpc_retry!(client, get_task_output(request.clone())).await {
        Ok(resp) => {
            pb.finish_and_clear();
            resp.into_inner()
        }
        Err(e) => {
            pb.finish_with_message("è·å–å¤±è´¥");
            return Err(anyhow!("è·å–ä»»åŠ¡è¾“å‡ºå¤±è´¥: {}", format_grpc_error(&e)));
        }
    };

    let Some(execution) = response.execution else {
        return Err(anyhow!("æœåŠ¡è¿”å›ä¸ºç©ºï¼šæœªåŒ…å« execution"));
    };

    let agent_id = execution
        .agent_id
        .as_ref()
        .map(|id| id.value.as_str())
        .unwrap_or("unknown");

    crate::ui::print_success("ä»»åŠ¡è¾“å‡ºè·å–æˆåŠŸ");
    print_info(&format!("Task ID: {}", style(&args.task_id).bold()));
    print_info(&format!("Agent: {}", style(agent_id).bold()));

    if let Some(exit_code) = execution.exit_code {
        print_info(&format!("é€€å‡ºç : {}", style(exit_code).bold()));
    }

    println!();
    print_header("stdout");
    let out = decode_base64_prefixed(&execution.stdout);
    if out.is_empty() {
        println!("-");
    } else {
        print!("{}", out);
        if !out.ends_with('\n') {
            println!();
        }
    }

    println!();
    print_header("stderr");
    let err = decode_base64_prefixed(&execution.stderr);
    if err.is_empty() {
        println!("-");
    } else {
        let ends_with_newline = err.ends_with('\n');
        print!("{}", style(&err).red());
        if !ends_with_newline {
            println!();
        }
    }

    Ok(())
}

/// æ‰§è¡Œä»»åŠ¡æäº¤å‘½ä»¤
async fn run_exec_run(
    client: &mut OasisServiceClient<tonic::transport::Channel>,
    args: ExecRunArgs,
) -> Result<()> {
    print_header(&format!(
        "æäº¤æ‰¹é‡ä»»åŠ¡: {}",
        style(args.command.join(" ")).cyan()
    ));

    // è§£æå‘½ä»¤å’Œå‚æ•°
    let (cmd, command_args) = args
        .command
        .split_first()
        .ok_or_else(|| anyhow::anyhow!("å‘½ä»¤ä¸èƒ½ä¸ºç©º"))?;

    // æ„å»ºè¯·æ±‚
    let request = SubmitBatchRequest {
        batch_request: Some(BatchRequestMsg {
            command: cmd.to_string(),
            args: command_args.iter().map(|s| s.to_string()).collect(),
            target: Some(SelectorExpression {
                expression: args.target.clone(),
            }),
            timeout_seconds: args.timeout,
        }),
    };

    // æäº¤ä»»åŠ¡
    let pb = crate::ui::create_spinner("æ­£åœ¨æäº¤ä»»åŠ¡...");
    let response = match grpc_retry!(client, submit_batch(request.clone())).await {
        Ok(resp) => {
            pb.finish_and_clear();
            resp.into_inner()
        }
        Err(e) => {
            pb.finish_with_message("æäº¤å¤±è´¥");
            crate::ui::print_error(&format!("æäº¤ä»»åŠ¡å¤±è´¥: {}", format_grpc_error(&e)));
            return Err(anyhow!("æäº¤ä»»åŠ¡å¤±è´¥"));
        }
    };

    let batch_id = response
        .batch_id
        .ok_or_else(|| anyhow!("æœåŠ¡å™¨æ²¡æœ‰è¿”å›æ‰¹æ¬¡ID"))?
        .value;

    crate::ui::print_success("æ‰¹é‡ä»»åŠ¡å·²æäº¤æˆåŠŸ");
    print_info(&format!("æ‰¹æ¬¡ID: {}", style(&batch_id).green().bold()));
    print_info(&format!("å·²ç»åˆ›å»º {} ä¸ªä»»åŠ¡", response.agent_nums));

    print_next_step(&format!(
        "ä½¿ç”¨ 'oasis-cli exec get {}' æŸ¥çœ‹æ‰¹é‡ä»»åŠ¡åˆ—è¡¨",
        batch_id
    ));
    Ok(())
}

async fn run_exec_get(
    client: &mut OasisServiceClient<tonic::transport::Channel>,
    args: ExecGetArgs,
) -> Result<()> {
    print_header(&format!("æ‰¹æ¬¡è¯¦æƒ…: {}", style(&args.batch_id).cyan()));

    let state_filters = args
        .states
        .map(|states| {
            states
                .into_iter()
                .map(|s| parse_task_state(&s))
                .collect::<Result<Vec<_>, _>>()
        })
        .transpose()?;

    // è·å–æ‰¹æ¬¡è¯¦æƒ…
    let request = GetBatchDetailsRequest {
        batch_id: Some(oasis_core::proto::BatchId {
            value: args.batch_id.clone(),
        }),
        states: state_filters.unwrap_or_default(),
    };

    let pb = crate::ui::create_spinner("æ­£åœ¨è·å–æ‰¹æ¬¡ä¿¡æ¯...");
    let batch_details = match grpc_retry!(client, get_batch_details(request.clone())).await {
        Ok(response) => {
            pb.finish_and_clear();
            response.into_inner()
        }
        Err(e) => {
            pb.finish_with_message("è·å–å¤±è´¥");
            return Err(anyhow!("æŸ¥è¯¢å¤±è´¥: {}", format_grpc_error(&e)));
        }
    };

    if batch_details.tasks.is_empty() {
        print_info("è¯¥æ‰¹æ¬¡æ²¡æœ‰æ‰¾åˆ°ä»»åŠ¡");
        return Ok(());
    }

    // æ˜¾ç¤ºä»»åŠ¡è¯¦æƒ…è¡¨æ ¼
    display_task_executions(&batch_details.tasks)?;

    // æ˜¾ç¤ºç»Ÿè®¡ä¿¡æ¯
    display_batch_statistics(&batch_details.tasks);

    Ok(())
}

async fn run_exec_list(
    client: &mut OasisServiceClient<tonic::transport::Channel>,
    args: ExecListArgs,
) -> Result<()> {
    print_header("æ‰¹é‡ä»»åŠ¡åˆ—è¡¨");

    // è§£æçŠ¶æ€ç­›é€‰
    let state_filters = args
        .states
        .map(|states| {
            states
                .into_iter()
                .map(|s| parse_task_state(&s))
                .collect::<Result<Vec<_>, _>>()
        })
        .transpose()?;

    let request = ListBatchesRequest {
        limit: args.limit,
        states: state_filters.unwrap_or_default(),
    };

    let pb = crate::ui::create_spinner("æ­£åœ¨è·å–æ‰¹é‡ä»»åŠ¡åˆ—è¡¨...");
    let response = match grpc_retry!(client, list_batches(request.clone())).await {
        Ok(response) => {
            pb.finish_and_clear();
            response.into_inner()
        }
        Err(e) => {
            pb.finish_with_message("è·å–å¤±è´¥");
            return Err(anyhow!("è·å–æ‰¹é‡ä»»åŠ¡åˆ—è¡¨å¤±è´¥: {}", format_grpc_error(&e)));
        }
    };

    if response.batches.is_empty() {
        print_info("æœªæ‰¾åˆ°æ‰¹æ¬¡");
        return Ok(());
    }

    // æ˜¾ç¤ºæ‰¹æ¬¡åˆ—è¡¨
    display_batch_list(&response.batches)?;

    print_info(&format!(
        "æ˜¾ç¤º {} ä¸ªæ‰¹æ¬¡ä»»åŠ¡ï¼Œæ€»æ•°: {}",
        response.batches.len(),
        response.total_count
    ));

    if response.has_more {
        print_next_step(&format!("è¿˜æœ‰æ›´å¤šæ‰¹æ¬¡ä»»åŠ¡ï¼Œå½“å‰æ˜¾ç¤ºå‰ {} ä¸ª", args.limit));
    }

    Ok(())
}

/// å–æ¶ˆä»»åŠ¡
async fn run_exec_cancel(
    client: &mut OasisServiceClient<tonic::transport::Channel>,
    args: ExecCancelArgs,
) -> Result<()> {
    print_header(&format!("å–æ¶ˆæ‰¹æ¬¡ä»»åŠ¡: {}", style(&args.batch_id).cyan()));

    let request = CancelBatchRequest {
        batch_id: Some(oasis_core::proto::BatchId {
            value: args.batch_id.clone(),
        }),
    };

    let pb = crate::ui::create_spinner("æ­£åœ¨å–æ¶ˆæ‰¹æ¬¡ä»»åŠ¡...");
    let response = match grpc_retry!(client, cancel_batch(request.clone())).await {
        Ok(response) => {
            let resp = response.into_inner();
            if resp.success {
                pb.finish_with_message("æ‰¹æ¬¡ä»»åŠ¡å·²å–æ¶ˆ");
            } else {
                pb.finish_with_message("å–æ¶ˆå¤±è´¥");
            }
            resp
        }
        Err(e) => {
            pb.finish_with_message("è¯·æ±‚å¤±è´¥");
            return Err(anyhow!("å–æ¶ˆæ‰¹æ¬¡ä»»åŠ¡å¤±è´¥: {}", format_grpc_error(&e)));
        }
    };

    if !response.success {
        print_warning("æ‰¹æ¬¡ä»»åŠ¡å–æ¶ˆå¤±è´¥ï¼Œè¯·æ£€æŸ¥æ‰¹æ¬¡IDæˆ–çŠ¶æ€");
    }

    Ok(())
}

// ä½ çš„ display_task_executions å‡½æ•°
fn display_task_executions(executions: &[TaskExecutionMsg]) -> Result<()> {
    let mut table = Table::new();
    table.load_preset(UTF8_FULL);
    table.set_content_arrangement(ContentArrangement::Dynamic);
    table.set_width(120);

    let mut header = vec![
        Cell::new("ä»»åŠ¡ID")
            .add_attribute(Attribute::Bold)
            .set_alignment(CellAlignment::Center),
        Cell::new("Agent")
            .add_attribute(Attribute::Bold)
            .set_alignment(CellAlignment::Center),
        Cell::new("çŠ¶æ€")
            .add_attribute(Attribute::Bold)
            .set_alignment(CellAlignment::Center),
        Cell::new("é€€å‡ºç ")
            .add_attribute(Attribute::Bold)
            .set_alignment(CellAlignment::Center),
    ];
    header.push(
        Cell::new("è€—æ—¶")
            .add_attribute(Attribute::Bold)
            .set_alignment(CellAlignment::Center),
    );
    header.push(
        Cell::new("åˆ›å»ºæ—¶é—´")
            .add_attribute(Attribute::Bold)
            .set_alignment(CellAlignment::Center),
    );
    table.set_header(header);

    for execution in executions {
        let task_id = execution
            .task_id
            .as_ref()
            .map(|id| id.value.as_str())
            .unwrap_or("unknown");
        let agent_id = execution
            .agent_id
            .as_ref()
            .map(|id| id.value.as_str())
            .unwrap_or("unknown");
        let state = execution.state();
        let state_cn = state_to_cn(state);
        let exit_code = execution
            .exit_code
            .map(|code| code.to_string())
            .unwrap_or("-".to_string());
        let duration = if let Some(dur) = execution.duration_ms {
            format!("{:.3}s", dur / 1000.0)
        } else {
            "-".to_string()
        };
        let created_at = format_timestamp(execution.started_at);

        let mut state_cell = Cell::new(state_cn).set_alignment(CellAlignment::Center);
        state_cell = match state {
            TaskStateEnum::TaskCreated => state_cell.fg(Color::DarkGrey),
            TaskStateEnum::TaskPending => state_cell.fg(Color::Yellow),
            TaskStateEnum::TaskRunning => state_cell.fg(Color::Blue),
            TaskStateEnum::TaskSuccess => {
                state_cell.fg(Color::Green).add_attribute(Attribute::Bold)
            }
            TaskStateEnum::TaskFailed => state_cell.fg(Color::Red).add_attribute(Attribute::Bold),
            TaskStateEnum::TaskTimeout => state_cell.fg(Color::Magenta),
            TaskStateEnum::TaskCancelled => state_cell.fg(Color::DarkGrey),
        };

        let mut row = vec![
            Cell::new(task_id).set_alignment(CellAlignment::Center),
            Cell::new(agent_id).set_alignment(CellAlignment::Center),
            state_cell,
            Cell::new(exit_code).set_alignment(CellAlignment::Center),
        ];
        row.push(Cell::new(duration).set_alignment(CellAlignment::Center));
        row.push(Cell::new(created_at).set_alignment(CellAlignment::Center));
        table.add_row(row);
    }

    println!("{}", table);
    Ok(())
}

/// æ˜¾ç¤ºæ‰¹æ¬¡ç»Ÿè®¡ä¿¡æ¯
fn display_batch_statistics(executions: &[TaskExecutionMsg]) {
    let total = executions.len();
    let mut success = 0;
    let mut failed = 0;
    let mut running = 0;
    let mut pending = 0;
    let mut timeout = 0;
    let mut cancelled = 0;

    for execution in executions {
        match execution.state() {
            TaskStateEnum::TaskSuccess => success += 1,
            TaskStateEnum::TaskFailed => failed += 1,
            TaskStateEnum::TaskRunning => running += 1,
            TaskStateEnum::TaskPending | TaskStateEnum::TaskCreated => pending += 1,
            TaskStateEnum::TaskTimeout => timeout += 1,
            TaskStateEnum::TaskCancelled => cancelled += 1,
        }
    }

    println!();
    print_header("ç»Ÿè®¡ä¿¡æ¯");

    if success > 0 {
        print_info(&format!("âœ“ æˆåŠŸ: {}", style(success).green().bold()));
    }
    if failed > 0 {
        print_info(&format!("âœ— å¤±è´¥: {}", style(failed).red().bold()));
    }
    if running > 0 {
        print_info(&format!("â³ è¿è¡Œä¸­: {}", style(running).blue().bold()));
    }
    if pending > 0 {
        print_info(&format!("âŒ› ç­‰å¾…ä¸­: {}", style(pending).yellow().bold()));
    }
    if timeout > 0 {
        print_info(&format!("â° è¶…æ—¶: {}", style(timeout).magenta().bold()));
    }
    if cancelled > 0 {
        print_info(&format!("ğŸš« å·²å–æ¶ˆ: {}", style(cancelled).dim().bold()));
    }

    let success_rate = if total > 0 {
        (success as f64 / total as f64) * 100.0
    } else {
        0.0
    };

    print_info(&format!(
        "æ€»è®¡: {} | æˆåŠŸç‡: {}",
        style(total).bold(),
        style(format!("{:.1}%", success_rate)).green().bold()
    ));
}

/// è§£æä»»åŠ¡çŠ¶æ€å­—ç¬¦ä¸²
fn parse_task_state(state_str: &str) -> Result<i32> {
    match state_str.to_lowercase().as_str() {
        "created" => Ok(TaskStateEnum::TaskCreated as i32),
        "pending" => Ok(TaskStateEnum::TaskPending as i32),
        "running" => Ok(TaskStateEnum::TaskRunning as i32),
        "success" => Ok(TaskStateEnum::TaskSuccess as i32),
        "failed" => Ok(TaskStateEnum::TaskFailed as i32),
        "timeout" => Ok(TaskStateEnum::TaskTimeout as i32),
        "cancelled" => Ok(TaskStateEnum::TaskCancelled as i32),
        _ => Err(anyhow!("æ— æ•ˆçš„ä»»åŠ¡çŠ¶æ€: {}", state_str)),
    }
}

/// æ˜¾ç¤ºä»»åŠ¡åˆ—è¡¨
fn display_batch_list(batches: &[BatchMsg]) -> Result<()> {
    let mut table = Table::new();
    table.load_preset(UTF8_FULL);

    table.set_header(vec![
        Cell::new("æ‰¹æ¬¡ä»»åŠ¡ID").add_attribute(Attribute::Bold),
        Cell::new("å‘½ä»¤").add_attribute(Attribute::Bold),
        Cell::new("å‚æ•°").add_attribute(Attribute::Bold),
        Cell::new("åˆ›å»ºæ—¶é—´").add_attribute(Attribute::Bold),
    ]);

    for batch in batches {
        let batch_id = batch
            .batch_id
            .as_ref()
            .map(|id| id.value.clone())
            .unwrap_or_else(|| "unknown".to_string());

        let command = batch.command.clone();
        let args = batch.args.join(" ");
        let created_at = format_timestamp(batch.created_at);

        table.add_row(vec![
            Cell::new(batch_id),
            Cell::new(command),
            Cell::new(args),
            Cell::new(created_at),
        ]);
    }

    println!("{}", table);

    Ok(())
}

/// æ ¼å¼åŒ–æ—¶é—´æˆ³
fn format_timestamp(timestamp: i64) -> String {
    crate::time::format_local_ts(timestamp)
}

// çŠ¶æ€ä¸­æ–‡æ˜ å°„
fn state_to_cn(state: TaskStateEnum) -> &'static str {
    match state {
        TaskStateEnum::TaskCreated => "å·²åˆ›å»º",
        TaskStateEnum::TaskPending => "ç­‰å¾…ä¸­",
        TaskStateEnum::TaskRunning => "æ‰§è¡Œä¸­",
        TaskStateEnum::TaskSuccess => "æˆåŠŸ",
        TaskStateEnum::TaskFailed => "å¤±è´¥",
        TaskStateEnum::TaskTimeout => "è¶…æ—¶",
        TaskStateEnum::TaskCancelled => "å·²å–æ¶ˆ",
    }
}
